# Jobful

./: .dockerignore  .gitignore  Dockerfile  README.md  git  run_all.ps1
backend/: .env.example  main.py  pyproject.toml  test.py
backend/api/controllers/: applications_controller.py  auth_controller.py  cv_controller.py  health_controller.py  jobs_controller.py  onboarding_controller.py
backend/api/dependencies/: auth.py  common.py
backend/api/middleware/: auth_context.py
backend/api/routes/: applications.py  auth.py  cv.py  health.py  jobs.py  onboarding.py  profile.py  search.py
backend/api/schemas/: applications.py  auth.py  cv.py  onboarding.py  profile.py  search.py
backend/core/: config.py  security.py
backend/data/: ats_portals.json
backend/db/: connection.py  executor.py  query_loader.py
backend/db/queries/applications/: create_application.sql  delete_application.sql  get_application_detail.sql  get_applications_per_tag.sql  get_user_applications.sql  update_application_status.sql
backend/db/queries/auth/: create_refresh_session.sql  create_user.sql  create_verified_user.sql  (+12 more)
backend/services/: application_document_service.py  application_service.py  ats_scanner.py  auth_service.py  cv_service.py  email_service.py  google_oauth_service.py  groq_client.py  hf_fallback_client.py  job_feed_utils.py  job_filter_service.py  job_gate.py  job_service.py  onboarding_service.py  profile_service.py  search_service.py  verification_service.py
backend/services/templates/: cover_letter_template.html  cv_template.html
backend/utils/: sql_loader.py
(+61 files in other folders)
