[project]
name = "jobful-backend"
version = "0.1.0"
description = "FastAPI backend for the Jobful autonomous job application system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "psycopg2-binary>=2.9.9",
  "bcrypt>=4.0.1",
  "PyJWT>=2.10.1",
  "email-validator>=2.2.0",
  "slowapi>=0.1.9",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "langchain-groq>=0.2.0",
  "pymupdf>=1.24.0",
  "python-multipart>=0.0.9"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = []

[tool.hatch.build.targets.wheel]
packages = ["."]
